--- a/src/main/java/com/github/konbluesky/jdph/ui/DesignPatternDialog.form
+++ b/src/main/java/com/github/konbluesky/jdph/ui/DesignPatternDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1246" height="801"/>
+      <xy x="20" y="20" width="1473" height="801"/>
     </constraints>
     <properties>
       <minimumSize width="600" height="380"/>
@@ -59,7 +59,7 @@
           </scrollpane>
         </children>
       </grid>
-      <grid id="d84a3" binding="rightPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d84a3" binding="rightPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -67,7 +67,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="9f3bb" class="javax.swing.JTextArea" binding="editorTextField">
+          <component id="9f3bb" class="com.intellij.ui.EditorTextField" binding="editorTextField">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
@@ -75,11 +75,6 @@
             </constraints>
             <properties/>
           </component>
-          <vspacer id="2897b">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
         </children>
       </grid>
     </children>
