--- a/src/main/java/com/github/konbluesky/jdph/ui/DesignPatternDialog.form
+++ b/src/main/java/com/github/konbluesky/jdph/ui/DesignPatternDialog.form
@@ -6,8 +6,8 @@
       <xy x="20" y="20" width="1473" height="801"/>
     </constraints>
     <properties>
-      <minimumSize width="600" height="380"/>
-      <preferredSize width="800" height="500"/>
+      <minimumSize width="800" height="380"/>
+      <preferredSize width="1000" height="500"/>
     </properties>
     <border type="none"/>
     <children>
@@ -29,6 +29,10 @@
               <component id="964ec" class="com.intellij.ui.components.JBList" binding="projectList">
                 <constraints/>
                 <properties>
+                  <minimumSize width="70" height="0"/>
+                  <opaque value="true"/>
+                  <preferredSize width="150" height="22"/>
+                  <requestFocusEnabled value="true"/>
                   <selectionMode value="0"/>
                 </properties>
               </component>
@@ -51,9 +55,12 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="b43a0" class="com.intellij.ui.treeStructure.Tree" binding="fileTree">
+              <component id="b43a0" class="com.intellij.ui.treeStructure.Tree" binding="fileTree" custom-create="true">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <minimumSize width="300" height="0"/>
+                  <preferredSize width="300" height="20"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
@@ -70,7 +77,7 @@
           <component id="9f3bb" class="com.intellij.ui.EditorTextField" binding="editorTextField">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+                <preferred-size width="300" height="50"/>
               </grid>
             </constraints>
             <properties/>
